--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,7 +53,12 @@
         "functional": "c",
         "httpd.h": "c",
         "netapi.h": "c",
-        "sys_plat.h": "c"
+        "sys_plat.h": "c",
+        "cstdint": "cpp",
+        "array": "c",
+        "executor": "c",
+        "internet": "c",
+        "ratio": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
