feat(net): 添加网络接口基础功能
- 新增 ipaddr.h、loop.h、net_cfg.h、net_err.h、netif.h 等头文件
- 实现 ip 地址处理、网络接口初始化、loopback 接口等基础功能
- 更新项目配置，添加新文件到编译列表

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,7 +58,9 @@
         "array": "c",
         "executor": "c",
         "internet": "c",
-        "ratio": "c"
+        "ratio": "c",
+        "nlocker.h": "c",
+        "ipaddr.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
