feat(net): 实现网络接口基础功能
- 新增网络接口初始化、激活、关闭等功能
- 实现数据包发送和接收的接口
- 添加网络接口列表显示功能
- 优化循环接口的实现
- 更新相关头文件和源文件以支持新功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,8 @@
         "internet": "c",
         "ratio": "c",
         "nlocker.h": "c",
-        "ipaddr.h": "c"
+        "ipaddr.h": "c",
+        "thread": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
