--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,8 @@
         "ratio": "c",
         "nlocker.h": "c",
         "ipaddr.h": "c",
-        "thread": "c"
+        "thread": "c",
+        "netif_pcap.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
