feat(net): 实现 loop 设备的数据发送功能并优化 PCAP 驱动
- 在 exmsg.c 中添加数据包填充和发送逻辑
- 修改 loop.c，移除无用的包发送代码
- 更新 netif_pcap.c，实现数据包接收和发送线程
- 在 settings.json 中添加新文件的代码语言设置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,10 @@
         "nlocker.h": "c",
         "ipaddr.h": "c",
         "thread": "c",
-        "netif_pcap.h": "c"
+        "netif_pcap.h": "c",
+        "buffer": "c",
+        "socket": "c",
+        "string_view": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
