feat(net): 添加以太网支持并优化网络初始化
- 新增 ether.h 和 ether.c 文件，实现以太网相关功能
- 新增 tools.h 和 tools.c 文件，提供字节序转换等工具函数
- 修改 netif.h 和 netif.c，增加链路层注册和初始化逻辑
- 更新 net.c，添加以太网初始化步骤
- 优化设置文件，增加以太网调试选项和网络字节序配置

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,7 +65,8 @@
         "netif_pcap.h": "c",
         "buffer": "c",
         "socket": "c",
-        "string_view": "c"
+        "string_view": "c",
+        "nlist.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
