--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,7 +66,9 @@
         "buffer": "c",
         "socket": "c",
         "string_view": "c",
-        "nlist.h": "c"
+        "nlist.h": "c",
+        "timer.H": "cpp",
+        "typeinfo": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled",
     "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools"
